gcc/testsuite/rust/rustc/ui/issues/issue-14772.rs
// compile-flags: --test

#[test]
mod foo {} // { dg-error "" "" { target *-*-* } }

fn main() {}

